@@ -1,6 +1,6 @@
 #!/bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2017, 2018 Laboratoire de Recherche et Développement
+# Copyright (C) 2017, 2018, 2022 Laboratoire de Recherche et Développement
 # de l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -46,3 +46,17 @@ for f in out.csv out2.csv; do
   sed 's/,[0-9]*\.[0-9]*,/,TIME,/' $f > _$f
 done
 diff _out.csv _out2.csv
+
+
+# The {autfilt {complement}} name makes sure we can nest braces.
+randaut -n10 2 |
+    autcross 'ltl2dstar --complement-input=yes' 'autfilt --complement' \
+  --language-complemented --csv=out3.csv --verbose 2>stderr
+test 10 = `grep 'check_empty Comp(input)\*Comp(A0)' stderr | wc -l`
+
+
+randaut -n1 2 |
+    autcross 'ltl2dstar --complement-input=yes' 'autfilt --complement' \
+             --language-complemented --language-preserved 2> stderr && exit 1
+cat stderr
+grep 'preserved.*complemented.*incompatible' stderr
